--- a/app/globals.css
+++ b/app/globals.css
@@ -302,3 +302,36 @@ main {
   background-color: white;
   z-index: 2;
 }
+
+.profile-picture-wrapper {
+  position: relative;
+  display: inline-block;
+  width: 60vw;
+  max-width: 200px;
+}
+
+.profile-picture {
+  width: 100%;
+  aspect-ratio: 1/1;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.edit-icon-wrapper {
+  position: absolute;
+  bottom: 5%;
+  right: 10%;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.edit-icon {
+  color: white;
+  font-size: 16px;
+}
