set display name and rename profile image

--- a/app/globals.css
+++ b/app/globals.css
@@ -337,3 +337,15 @@ main {
   margin-right: 0;
   font-size: 16px;
 }
+
+/* visitng profile styles */
+
+.user-profile {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100dvh;
+  width: 100vw;
+  background-color: white;
+  z-index: 2;
+}
