--- a/app/globals.css
+++ b/app/globals.css
@@ -372,3 +372,10 @@ main {
   border-radius: 15px;
   text-align: center;
 }
+
+.back-btn {
+  margin-left: 0;
+  margin-right: auto;
+  padding-left: 2rem;
+  padding-top: 1.5rem;
+}
