--- a/app/globals.css
+++ b/app/globals.css
@@ -383,3 +383,14 @@ main {
   padding-top: 1.5rem;
   cursor: pointer;
 }
+
+.location-carousel {
+  max-width: 100vw;
+}
+.carousel-image {
+  width: 100%;
+  height: auto;
+}
+.carousel-indicators button {
+  background-color: black !important;
+}
