--- a/app/globals.css
+++ b/app/globals.css
@@ -210,6 +210,7 @@ main {
 
 .store-image-wrapper {
   position: relative;
+  padding-bottom: 1rem;
 }
 .heart-icon {
   position: absolute;
@@ -386,10 +387,14 @@ main {
 
 .location-carousel {
   max-width: 100vw;
+  min-height: 200px;
 }
 .carousel-image {
   width: 100%;
   height: auto;
+}
+.carousel-indicators {
+  bottom: -25px !important;
 }
 .carousel-indicators button {
   background-color: black !important;
