--- a/app/globals.css
+++ b/app/globals.css
@@ -399,3 +399,16 @@ main {
 .carousel-indicators button {
   background-color: black !important;
 }
+
+.use-location-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.location-button {
+  padding: 0.5rem 0.75rem;
+  border: 1px solid red;
+  background-color: #0d6efd;
+  border-radius: 5px;
+}
